samples/_failures_safe/1761429515_6f53c6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_71b1778c.c: In function ‘main’:
./samples/SAFE/__tmp_71b1778c.c:134:5: error: expected expression at end of input
  134 |     } else if (strcmp(choice,
      |     ^
./samples/SAFE/__tmp_71b1778c.c:134:5: error: expected declaration or statement at end of input
